# lightningcss-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  a.css  b.css  comp.py  lightningcss_py.pyi  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  startup.py  style.css  test.py
src/: lib.rs
tests/: conftest.py  test_bundle.py  test_nesting.py  test_parse_version.py  test_sourcemap.py
